Add Swagger annotations to order routes and update README
